<resources>
    <string name="app_name" translatable="false">Midterm 07600430</string>

    <!-- Text -->
    <string name="loginTitle">Login to Facebook</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="loginButton">Login</string>

    <string name="loginFail">Invalid username or password</string>
    <string name="loginSuccessFragment">Welcome</string>

    <string name="addStoryText">Add to Story</string>
    <string name="viewAsText">View As</string>
    <string name="editProfileText">Edit Profile</string>
    <string name="moreText">More</string>

    <string name="goesText">Goes to</string>
    <string name="livesText">Lives in</string>
    <string name="fromText">From</string>
</resources>
